Remove Slaughtering Trait
duplication exploit >:V

--- a/Client/overrides/config/tweakersconstruct.cfg
+++ b/Client/overrides/config/tweakersconstruct.cfg
@@ -167,6 +167,10 @@ miscelleaneous {
 	vibranium:head:dense
 	vibranium:extra:resonance
 	vibranium:handle:resonance
+	terrax:all:momentum
+	terrax:head:momentum,magnetic
+	terrax:extra:momentum
+	terrax:handle:momentum
 	soularium:all:flammable
 	soularium:extra:splinters
 	soularium:head:hellish
@@ -174,7 +178,7 @@ miscelleaneous {
 	soularium:plates:infernal_armor
 	soularium:trim:vengeful_armor
 	jade:head:jaded,crumbling,botanical2,morganlefay
-	jade:handle:jaded,naturebound,crude2,slaughtering
+	jade:handle:jaded,naturebound,crude2,mirable
 	jade:extra:jaded,naturebound,crude2,analysing
 	jade:bow:jaded,ratty,enderport-2
 	jade:core:alien_armor,mundane2_armor,petravidity_armor,camdaibay_armor
